
[package]
authors = ["LongYinan <lynweklm@gmail.com>"]
edition = "2021"
name = "xprofiler_rs"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"
once_cell = "1.19"
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
base64 = "0.21"
md5 = "0.7"
sha2 = "0.10"
rand = "0.8"
parking_lot = "0.12"
dashmap = "5.5"
tracing = "0.1"
tracing-subscriber = "0.3"
num_cpus = "1.16"

[build-dependencies]
napi-build = "2"
chrono = "0.4"

# Platform-specific dependencies
[target.'cfg(unix)'.dependencies]
nix = "0.27"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["processthreadsapi", "psapi", "sysinfoapi", "winbase", "winnt"] }

[dev-dependencies]
tokio-test = "0.4"
serial_test = "3.0"
criterion = "0.5"
proptest = "1.0"
temp-dir = "0.1"
tempfile = "3.0"

[profile.release]
lto = "off"
codegen-units = 16
opt-level = 1
strip = "none"
debug = false
panic = "unwind"
incremental = true

[[bench]]
name = "benchmarks"
harness = false

[features]
default = []
benchmarks = []
testing = []
